# STM32F103-BareMetal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  linker.ld
include/: delay.h  gpio.h  stm32f103.h
src/: gpio.c  main.c  startup.c  vectors.c
